============================================================
=== R package 'polywog'
===
=== Code by Brenton Kenkel and Curtis S. Signorino
=== Maintained by Brenton Kenkel (brenton.kenkel@gmail.com)
============================================================


polywog 0.2-0 (2012-06-XX)
--------------------------

* New function cv.polywog() to select both the polynomial degree and the
  penalization parameter by cross-validation


polywog 0.1-0 (2012-05-12)
--------------------------

* Initial release